<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">潮箱</string>
    <string name="action_become_a_host">成为房东</string>
    <string name="action_become_a_organiser">成为组织者</string>
    <string name="action_help">帮助</string>
    <string name="action_log_in">登录</string>
    <string name="action_sign_up">注册</string>

    // 底部导航栏
    <string name="title_explore">探索</string>
    <string name="title_favorites">心愿单</string>
    <string name="title_journey">旅程</string>
    <string name="title_message">消息</string>
    <string name="title_me">我的</string>

    // 消息提示
    <string name="msg_double_click_to_exit">再按一次退出程序</string>
</resources>
