<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.populstay.app.MainActivity">

    <item
        android:id="@+id/action_become_a_host"
        android:orderInCategory="100"
        android:title="@string/action_become_a_host"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_become_a_organiser"
        android:orderInCategory="100"
        android:title="@string/action_become_a_organiser"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_log_in"
        android:orderInCategory="100"
        android:title="@string/action_log_in"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sign_up"
        android:orderInCategory="100"
        android:title="@string/action_sign_up"
        app:showAsAction="never"/>

</menu>
